--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,8 @@ dependencies {
     })
 
     //Add Library
-
-
+    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     compile 'com.cepheuen.elegant-number-button:lib:1.0.2'
     compile 'com.android.support:design:26.+'
     compile 'com.android.support:appcompat-v7:26.+'
